# Proj8315Server

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build-full.sh  build.sh  docker-compose.yml  notes.txt  start.sh
data/: ObjectsConfig.txt
src/: .Commands.cpp.swp  .Commands.h.swp  BitShit.hpp  ByteBuffer.cpp  ByteBuffer.h  Client.cpp  Client.h  Commands.cpp  Commands.h  Common.cpp  Common.h  DatabaseManager.cpp  DatabaseManager.h  Debug.cpp  Debug.h  Main.cpp  MessageHandler.cpp  MessageHandler.h  RequestHandler.cpp  RequestHandler.h  Responses.cpp  Responses.h  Server.cpp  Server.h
src/cmds/: CommandNames.h  General.cpp  General.h  WorldState.cpp  WorldState.h
src/game/: .Game.cpp.swp  .Game.h.swp  Faction.cpp  Faction.h  Game.cpp  Game.h  StateUpdater.cpp  StateUpdater.h
src/game/objects/: Action.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  ObjectUpdater.cpp  ObjectUpdater.h
src/game/objects/actions/: ClassActions.cpp  ClassActions.h  CommonActions.cpp  CommonActions.h  MovementActions.cpp  MovementActions.h
src/game/stateUpdates/: GeoUpdater.cpp  GeoUpdater.h  StateUpdater.cpp  StateUpdater.h  WeatherUpdater.cpp  WeatherUpdater.h
src/game/world/: .Tile.h.swp  ElevationGenerator.cpp  ElevationGenerator.h  EnvironmentGenerator.cpp  EnvironmentGenerator.h  TemperatureGenerator.cpp  TemperatureGenerator.h  Tile.cpp  Tile.h  WaterGenerator.cpp  WaterGenerator.h  WorldGenerator.cpp  WorldGenerator.h
src/msgs/: Admin.cpp  Admin.h  General.cpp  General.h  WorldState.cpp  WorldState.h
src/utils/: Algorithm.cpp  Algorithm.h  StringUtil.cpp  StringUtil.h
